style.css
/* ... */
a  {
	color: #2E6D7D;
	text-decoration: none;
	-webkit-transition: color 0.3s linear;
	-moz-transition: color 0.3s linear;
    -o-transition:color 0.3s linear;
	transition:color 0.3s linear;
}
a:focus {
	outline: thin dotted;
}
a:hover,
a:active { 
	outline: 0;
	text-decoration: underline;
}

a img {
	border: 0;
}

/* Text meant only for screen readers */
.assistive-text {
	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
}
.clearfix:after {
	visibility: hidden;
	display: block;
	font-size: 0;
	content: " ";
	clear: both;
	height: 0;
	}
* html .clearfix             { zoom: 1; } /* IE6 */
*:first-child+html .clearfix { zoom: 1; } /* IE7 */
.clear {
	clear: both;
}
	
/************************************************************** 
* NAV AND SUB NAV 
**************************************************************/

#top-menu {
	background: /*add bg*/;
	position:relative; 
	text-align:center;
}
#top-menu li {
	list-style:none;
	margin-right: 5px;
	padding:0;
	position:relative; 
}
#top-menu ul li { 
	background: /*add bg*/;
	display: inline; /*underscoreIE6 only*/
	_width: 100%; /*underscore is IE6 only*/
	
} 
#top-menuli a {
	color: #121212; 
	display:block;
	padding:0 15px; 
	text-align:center;
	
}
#top-menu li a:hover {
	color:#CC4D22;
	text-decoration:none;
	
}
	
/* Currently selected page nav item (and parent) if applicable */
.current_page_item a, 
.current_page_parent a { 
	text-decoration: none;
}
.current_page_item a:hover, 
.current_page_parent a:hover {
	text-decoration: underline;
}

/************************************************************** 
* FRONT PAGE
**************************************************************/
.wp .header-wrap {
	padding-bottom: 40px;
}

/************************************************************** 
* FRONT PAGE
**************************************************************/
.main-content-home {
	background-color: #f2f1ee;
	border-top: 1px solid #e0ded6;
	padding-bottom: 5px;
}
.homepage-main-wrap {
	background-color: #fff;
	box-shadow: 0 1px 3px rgba(0,0,0,0.1);
	margin: 45px auto;
	padding: 30px;
	width: 64.5%;
	max-width: 840px;
}
.block h3 {
	font-size: 1.75em; /* 28/16 */
}
.block-wrap {
	border: 1px solid #9a9a9a;
	width: 100%;
	max-width: 770px;
}
.homepage-main-block {
	padding: 40px 0;
	text-align: center;	
}
.first-title {
	font-size: 2.375em;  /* 38/16 */
	font-weight: bold;
	padding: 0 20px;
	margin-bottom: 2%;
}
.homepage-main-block p {
	background: url(images/stroke.gif) center center repeat-x;
	font-size: 1.25em ; /* 20/16 */
	font-weight: bold;
	line-height: 1.3em;
	margin: 0 5em;
}
.homepage-main-block p span {
	background-color: #fff;
	border: 10px solid #fff;
	border-width: 0 15px;
}
.block {
	border: 1px solid #9a9a9a;
	border-width: 1px 1px 0 0;
	float: left;
	padding: 40px;
	text-align: center;
	width: 50%;
}
.block p {
	font-size: 0.9375em; /* 15/16 */
	text-align: left;
}
.bottom-boxes {
    height: auto;
    min-height: 238px;
    overflow: hidden;
    position: relative;
}
.box_1 {
	background-color: #eaefdf;
    bottom: 0;
    height: 100%;
    left: 0;
    position: absolute;	
}
.box_2 {
	background-color: #e0eef1;
	border-right: none;
    bottom: 0;
    height: 100%;
    position: absolute;
    right: 0;	
}
.cta-btn {
	border-radius: 4px;
	color: #fff;
	display: block;
	font-size: 0.875em; /* 14/16 */
	font-weight: bold;
	margin: auto;
	max-width: 150px;	
	padding: 7px 20px;
	text-transform: uppercase;	
}
.box_1 .cta-btn {
	background-color: #6b911f;
}
.box_2 .cta-btn {
	background-color: #528f9e;	
}
.box_1 a:hover.cta-btn {
	background-color: #fff;
	color: #6b911f;
	text-decoration: none;
}
.box_2 a:hover.cta-btn {	
	background-color: #fff;
	color: #528f9e;	
	text-decoration: none;
}

/* Main Nav */

.main-menu-wrap-wp {
	margin-bottom: 40px;
}
.home .main-menu h2 {
	font-size: 0.9375em	; /* 15/16 */
	font-weight: bold;
	text-transform: uppercase;
}
.main-menu-list li {
	position: relative;
}
.author-btn a:before,
.genre-btn a:before,
.language-btn a:before,
.title-btn a:before {
	background: url(images/icons.png) 0 0 no-repeat;
    content: "";
    height: 25px;
    left: 25px;
    position: absolute;
    top: 11px;
    width: 20px;
}
.genre-btn a:before {
	background-position: 0 -92px;
    height: 27px;
    top: 4px;	
}
.language-btn a:before {
	background-position: 0 -187px;
    height: 35px;
    top: 0;	
}
.title-btn a:before {
	background-position: 0 -386px;
    height: 35px;
    top: 0;	
}

.home .author-btn a:before {
	left: 32%;
}
.home .genre-btn a:before {
    left: 22%;	
}
.home .language-btn a:before {
    left: 26%;	
}
.home .title-btn a:before {
    left: 31%;
}
.audio-book-feed {
	margin-right: 4%;
}
.audio-book-feed header,
.post-list-home header {
    margin-bottom: 5%;
	overflow: hidden;
}
.audio-book-feed h3.title,
.post-list-home .title {
	float: left;
	font-size: 1.125em; /* 18/16 */
    margin: 0;	
}

.more-link-home {
	float: right;
}
.post-list-home ul {
	list-style: none;
	padding-left: 0;
}
.post-list-home .meta {
	margin-bottom: 1%;
}
.post-list-home li {
	margin-bottom: 10%;
}

/* Newest Book Feed */

.home .browse-list .book-cover {
	width: 15%;
}

.home .browse-list .title {
	width: 70%;
}
.home .browse-list .language {
	width: 10%;
}

table.browse-list {
    background-color: #F8F8F5;
    border: 1px solid #E8E3D0;
    border-radius: 6px 6px 6px 6px;
    margin-bottom: 25px;
    min-height: 100px;
    overflow: hidden;
}
.catalog_date {
	color: #777;
	font-size: 0.75em; /* 12/16 */
}
/************************************************************** 
* Page undo from Catalog css 
**************************************************************/
.page {
	float: none;
	max-width: inherit;
	width: auto;
}
/************************************************************** 
* MAIN CONTENT 
**************************************************************/
.home .main-content {
	padding: 0 0 50px;
}
.main-menu-wrap-wp {
	padding-bottom: 50px;
}
/* ... */

